--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 author = ["KeyCap Studio<www.keycapstudio.io>", "LocalTash <@Local-Trash>"]
 description = "A ECS game engine, made for making easy pc games"
-license = "MPL"
 license-file = "LICENSE"
 repository = "https://github.com/Local-Trash/Fish/"
 readme = "README.md"
@@ -18,6 +17,9 @@ bytemuck = { version = "1.12", features = [ "derive" ] }
 chrono = { version = "*", default-features = false, features = ["clock"]}
 colored = "2.0.0"
 
+[dev-dependencies]
+pollster = "*"
+
 [dependencies.image]
 version = "0.24"
 default-features = false
@@ -28,6 +30,6 @@ fullLog = ["debug", "warning"]
 debug = []
 warning = []
 
-[[bin]]
+[[example]]
 name = "1-Window"
 path = "examples/"
