--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "gear"
+name = "example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "*"
-wgpu = "*"
+gear = {path = "../target/debug/libgear.so"}
 
-[lib]
-name = "gear"
-crate-type = ["dylib"]
+[[bin]]
+name = "example1"
+path = "src/example1.rs"
