--- a/examples/new_window/Cargo.toml
+++ b/examples/new_window/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "gear"
+name = "new_window"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "*"
-wgpu = "*"
-
-[lib]
-name = "gear"
-crate-type = ["dylib"]
