--- a/Libgear/Cargo.toml
+++ b/Libgear/Cargo.toml
@@ -3,6 +3,9 @@ name = "gear"
 version = "0.1.0"
 edition = "2021"
 
+[build-dependencies]
+gl_generator = "0.14.0"
+
 [lib]
 name = "gear"
 crate-type = ["cdylib"]
